[package]
name = "wgpu_compute_harness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
wgpu = { version = "0.16", features = ["spirv"] }
pollster = "0.3"
futures-intrusive = "0.5"
glam = "0.24.0"
encase = { version = "0.6.1", features = ["glam"] }
extended_morton_coder = "0.1.0"
rand = "0.8.5"
bytemuck = "1.9.0"
env_logger = "0.10.0"
log = "0.4.19"
